# VisnykMVP

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/newsmvp/: main.py  prestart.sh
backend/newsmvp/alembic/: env.py
backend/newsmvp/alembic/versions/: 2025_12_22_0953-157334040556_create_table_news.py  2025_12_22_1054-f49d361388e9_create_tables_news_source_news_type.py  2025_12_22_1451-e53d9236e11a_modify_news_and_news_source_schemas.py  2026_01_29_2234-140a8f032341_update_news_by_adding_embeddings_.py  2026_02_09_1836-108d3b15b393_update_news_adn_newstype_tables.py
backend/newsmvp/api/: __init__.py
backend/newsmvp/api/v1/: __init__.py  agent.py  dependencies.py  model.py  news.py  news_source.py
backend/newsmvp/core/: config.py
backend/newsmvp/database/: __init__.py  database.py
backend/newsmvp/database/schemas/: __init__.py  news_schema.py  news_source_schema.py  news_type_schema.py
backend/newsmvp/models/: __init__.py  message.py  news.py  news_source.py
backend/newsmvp/services/agent_service/: agent_config.py  agent_core.py  news_retriever.py  tools.py
backend/newsmvp/services/ml_service/: evaluating_core.py  model_core.py  nlp_config.py
backend/newsmvp/services/news_service/: clocker.py  news_config.py  news_core.py  news_source_core.py  news_type_core.py
backend/newsmvp/services/scrapper_service/: celery_beat.py  celery_worker.py  cleaning_core.py  news_text_parser.py  rss_parser.py
frontend/: package-lock.json  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: Agent.jsx  Agent.module.css  FiltersBar.jsx  FiltersBar.module.css  Header.jsx  Header.module.css  NavBar.jsx  NavBar.module.css  NewsFeed.jsx  NewsFeed.module.css
