[tool.poetry]
name = "newsmvp"
version = "0.1.0"
description = ""
authors = ["Yura <yura.savaryn.777@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.124.4"
uvicorn = {extras = ["standard"], version = "^0.38.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
