[tool.poetry]
name = "newsmvp"
version = "0.1.0"
description = ""
authors = ["Yura <yura.savaryn.777@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
fastapi = "^0.124.4"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
python-dotenv = "^1.2.1"
pandas = "^2.3.3"
requests = "^2.32.5"
feedparser = "^6.0.12"
beautifulsoup4 = "^4.14.3"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.45"}
asyncpg = "^0.31.0"
pydantic-settings = "^2.12.0"
redis = "^7.1.0"
celery = "^5.6.0"
alembic = "^1.17.2"
newspaper4k = "^0.9.4.1"
curl-cffi = "^0.14.0"
pgvector = "^0.3.0"
httpx = "^0.28.1"
hdbscan = "^0.8.41"
umap-learn = "^0.5.11"
spacy = "^3.8.11"
langchain = "^1.2.10"
ddgs = "^9.10.0"
langchain-google-genai = "^4.2.0"
langchain-postgres = "^0.0.17"
langchain-huggingface = "^1.2.0"


[tool.poetry.group.dev.dependencies]
black = "^25.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
